@@ -5,26 +5,54 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import { Fun, Obj, Optional } from '@ephox/katamari';
-import { Attribute, Compare, Css, SugarElement, SugarNode, TransformFind } from '@ephox/sugar';
+import { Arr, Obj, Optional, Fun } from '@ephox/katamari';
+import { Attribute, Css, SugarElement, SugarNode } from '@ephox/sugar';
 import DOMUtils from '../api/dom/DOMUtils';
+import * as NodeType from '../dom/NodeType';
+import * as RangeWalk from '../selection/RangeWalk';
+import { isNode } from './FormatUtils';
 
-const legacyPropNames: Record<string, string> = {
+export type FontProp = 'font-size' | 'font-family';
+
+const legacyPropNames: Record<FontProp, string> = {
   'font-size': 'size',
   'font-family': 'face'
 };
 
-const getSpecifiedFontProp = (propName: string, rootElm: Element, elm: HTMLElement): Optional<string> => {
-  const getProperty = (elm: SugarElement) => Css.getRaw(elm, propName).orThunk(() => {
-    if (SugarNode.name(elm) === 'font') {
-      return Obj.get(legacyPropNames, propName).bind((legacyPropName) => Attribute.getOpt(elm, legacyPropName));
-    } else {
-      return Optional.none();
-    }
-  });
-  const isRoot = (elm: SugarElement) => Compare.eq(SugarElement.fromDom(rootElm), elm);
+const collect = (dom: DOMUtils, rngOrNode: Range | Node, rootNode: Element, propName: FontProp): string[] => {
+  const collector: string[] = [];
 
-  return TransformFind.closest(SugarElement.fromDom(elm), (elm) => getProperty(elm), isRoot);
+  const process = (nodes: Node[], limit: Node, getComputed: boolean) => {
+    Arr.each(nodes, (node) => {
+      const matches = dom.getParents(node, '*[style],font', limit);
+      Arr.findMap(matches, (match) => getSpecifiedFontProp(propName, SugarElement.fromDom(match)))
+        .orThunk(() => {
+          // Cannot find computed style on text node so have get parent node if required
+          const elm = NodeType.isText(node) ? dom.getParent(node, '*', rootNode) : node as Element;
+          return getComputed ? getComputedFontProp(propName, elm) : Optional.none();
+        })
+        .each((value) => {
+          // Make sure value is unique
+          if (Arr.forall(collector, (existing) => existing !== value)) {
+            collector.push(value);
+          };
+        });
+
+      // Don't need to worry about potentially getting the computed value for children as if no fonts are found on the child,
+      // it will inherit the 'node' font value which may be computed
+      process(Arr.from(node.childNodes), node, false);
+    });
+  };
+
+  if (isNode(rngOrNode)) {
+    process([ rngOrNode ], rootNode, true);
+  } else {
+    RangeWalk.walk(dom, rngOrNode, (nodes) => {
+      process(nodes, rootNode, true);
+    });
+  }
+
+  return collector;
 };
 
 const round = (number: number, precision: number) => {
@@ -44,18 +72,33 @@ const normalizeFontFamily = (fontFamily: string) =>
   // 'Font name', Font -> Font name,Font
   fontFamily.replace(/[\'\"\\]/g, '').replace(/,\s+/g, ',');
 
-const getComputedFontProp = (propName: string, elm: HTMLElement): Optional<string> => Optional.from(DOMUtils.DOM.getStyle(elm, propName, true));
+const getSpecifiedFontProp = (propName: FontProp, elm: SugarElement): Optional<string> =>
+  Css.getRaw(elm, propName).orThunk(() => {
+    if (SugarNode.name(elm) === 'font') {
+      return Obj.get(legacyPropNames, propName).bind((legacyPropName) => Attribute.getOpt(elm, legacyPropName));
+    } else {
+      return Optional.none();
+    }
+  });
 
-const getFontProp = (propName: string) => (rootElm: Element, elm: Node): string => Optional.from(elm)
-  .map(SugarElement.fromDom)
-  .filter(SugarNode.isElement)
-  .bind((element: any) => getSpecifiedFontProp(propName, rootElm, element.dom)
-    .or(getComputedFontProp(propName, element.dom)))
-  .getOr('');
+const getComputedFontProp = (propName: FontProp, elm: Element): Optional<string> =>
+  Optional.from(DOMUtils.DOM.getStyle(elm, propName, true));
 
-const getFontSize = getFontProp('font-size');
+const getFontInfo = (propName: FontProp, normalize: (str: string) => string) => (rootNode: Element, rngOrNode: Range | Node) => {
+  const fontProps = Arr.map(collect(DOMUtils.DOM, rngOrNode, rootNode, propName), normalize);
+  // If there is more than one font prop found, cannot declare that there is a single font
+  if (fontProps.length === 0 || fontProps.length > 1) {
+    return '';
+  } else {
+    return fontProps[0];
+  }
+};
 
-const getFontFamily = Fun.compose(normalizeFontFamily, getFontProp('font-family')) as (rootElm: Element, elm: Node) => string;
+const getFontSize =
+  getFontInfo('font-size', Fun.identity);
+
+const getFontFamily =
+  getFontInfo('font-family', normalizeFontFamily);
 
 export {
   getFontSize,
